Foreach and event learning

--- a/7a.html
+++ b/7a.html
@@ -19,7 +19,7 @@
       return result;
     }
 
-    console.log(convertLength(13, 'miles', 'km'))
+    console.log(convertLength(10, 'km', 'miles'))
   </script>
 </body>
 </html>
